--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,7 @@
    "source": [
     "import torch\n",
     "\n",
+    "#new trial\n",
     "# Create two tensors\n",
     "tensor1 = torch.tensor([[1, 2], [3, 4]])\n",
     "tensor2 = torch.tensor([[5, 6], [7, 8]])\n",
@@ -318,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
